--- a/www/left/Ayuda.html
+++ b/www/left/Ayuda.html
@@ -1,6 +1,6 @@
 <div class="titulo-panel-izquierda">Centro de Ayuda</div>
 <div class="p-2" style="font-size: 80%;">
-    <img src="img/Logo-GEOOS.png" width="100%"/>
+    <img src="img/Logo-GEOOS-2.jpeg" width="100%"/>
     <hr />
     <p class="pl-3 pr-1" style="text-align: justify;">
         Para conocer y aprovechar las funcionalidades de GEOOS se recomienda a los nuevos usuarios comenzar por la
@@ -16,4 +16,6 @@
             <li><a target="_blank" href="http://help.geoos.org/contacto/">Contacto</a></li>
         </ul>
     </ul>
+    <hr />
+    <img id="logoHuinay" class="mt-auto" src="img/Logo-Huinay-PUCV.jpeg" width="100%"/>
 </div>
