--- a/www/left/login/Login.html
+++ b/www/left/login/Login.html
@@ -1,9 +1,8 @@
 <div class="titulo-panel-izquierda">Iniciar Sesión</div>
-<div class="p-2">
-    <img src="img/esfera-128x128.png" width="64px" class="float-left" />
-    <h6 class="text-right mr-1" style="margin-top: 25px;">GEOOS / PUCV</h6>
+<div class="px-4 text-center" style="background-color: #f7f7f7;">
+    <img src="img/Logo-GEOOS-2.jpeg" width="50%" />
 </div>
-<hr class="mb-0" />
+<hr class="my-0" />
 <div id="alerta" class="alert alert-danger m-2 small"></div>
 <div class="p-2">
     <label class="small mb-0 ml-1">Dirección e-mail</label>
@@ -51,6 +50,8 @@
 <div class="p-2">
     <h6 class="mt-2">¿Por qué registrarme?</h6>
     <p class="text-muted small">
-        Una vez que se registre como usuario en el Geoportal, podrá configurar grupos y capas como favoritos, intercambiar información con otros usuarios y participar en comunidades.
+        Una vez que se registre como usuario de GEOOS, podrá configurar grupos y capas como favoritos, intercambiar información con otros usuarios y participar en comunidades.
     </p>
 </div>
+<hr class="my-0"/>
+<img id="logoFooter" src="img/Logo-Huinay-PUCV.jpeg" width="100%"/>
