--- a/www/left/perfilUsuario/PerfilUsuario.html
+++ b/www/left/perfilUsuario/PerfilUsuario.html
@@ -1,4 +1,8 @@
 <div class="titulo-panel-izquierda">Sesión Iniciada</div>
+<div class="px-4 text-center" style="background-color: #f7f7f7;">
+    <img src="img/Logo-GEOOS-2.jpeg" width="50%" />
+</div>
+<hr class="my-0" />
 <div id="perfil" data-z-component="common/Perfil"></div>
 <hr class="my-0" />
 
@@ -19,3 +23,6 @@
     <img src="img/logout.svg" height="24px" class="float-left ml-2 mt-1" />
     <button id="cmdLogout" class="btn btn-link" type="button">Cerrar Sesión</button>
 </div>
+
+<hr class="my-0"/>
+<img id="logoFooter" src="img/Logo-Huinay-PUCV.jpeg" width="100%"/>
