--- a/www/index.html
+++ b/www/index.html
@@ -84,11 +84,16 @@
             document.addEventListener("DOMContentLoaded", async _ => {                
                 ZVC.options.debug.events = false;
                 let root = await ZVC.fromElement("main");
+                document.getElementById("splash").remove();
             });
         </script>
     </head>
 
-    <body>  
+    <body>
+        <div id="splash" style="width: 100%; height: 100%; background-color: #f7f7f7; z-index: 20000; position:absolute; top:0; left: 0;">
+            <i class="fas fa-2x fa-spin fa-spinner centered" style="margin-top: -100px;"></i>
+            <img class="centered" src="img/Logo-GEOOS-2.jpeg" style="margin-top: 20px;" />
+        </div>
         <div id="main" data-z-component="./Main" style="position: absolute;"></div>
     </body>
 </html>
