--- a/www/left/Left.html
+++ b/www/left/Left.html
@@ -1,7 +1,7 @@
 <div class="panel-izquierda">
     <div class="container-fluid">
         <div class="cuadro-logo" style="position:absolute; left:0; width: 70px; height: 70px;">
-            <img src="img/esfera-128x128.png" width="32px">
+            <img id="logoGEOOS" src="img/esfera-128x128.png" width="32px">
             <div style="color: black; font-weight: bold;" class="mt-1">GEOOS</div>
             <hr class="my-2" />
         </div>
